k8s/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bento
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 5m
spec:
  rules:
    - host: bento-dev.local
